--- a/404.html
+++ b/404.html
@@ -22,6 +22,6 @@ layout: default
 
   <p><strong>Page was stolen by goose</strong></p>
   <p>The requested page was stolen by that goose.</p>
-  <img src="assests/goose.jpg" alt="Goose">
+  <img src="assets/goose.jpg" alt="Goose">
   <p><strong>HONK.</strong></p>
 </div>
