--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@ layout: default
   <h1>404</h1>
 
   <p><strong>Page was stolen by goose</strong></p>
-  <p>The requested page was stolen by that goose.</p>
-  <img src="assets/goose.jpg" alt="Goose">
+  <p>The requested page was stolen by a horrible goose.</p>
+  <img src="/assets/goose.jpg" alt="Goose">
   <p><strong>HONK.</strong></p>
 </div>
